--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 
 
 <div class="row">
+<div class="col-md-3">
 
-<div class="col-md-8">
 
-<h3 class="numero"><span id = "label" class="label label-default"></span></h3>
+</div>
+<div class="col-md-3">
+<h3>Composez 3 chiffres et tentez votre chance :p</h3>
+<h3 class="numero text-center">><span id = "label" class="label label-default"></span></h3>
 <table class="keypad">
 
 	<tr class="key-row">
@@ -96,7 +99,7 @@
 </div>
 
 
-<div id="historique" class="col-md-4">
+<div id="historique" class="col-md-3">
 
 
 	
@@ -107,6 +110,7 @@
     </ol>
 
 </div>
+<div class="col-md-3"></div>
 
 
  </div>
