--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
  <script src="jquery.cookie.js"></script>
  <script src="http://gitcdn.org/libs/bitcoinate/0.2.1/index.min.js"></script>
 
+ <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-33520723-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
  <link rel="stylesheet" type="text/css" href="style.css">
 
 	<title></title>
